--- a/Post_Award_Analysis/Review_Analysis_Simplified.ipynb
+++ b/Post_Award_Analysis/Review_Analysis_Simplified.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "7ee9be8e",
    "metadata": {},
    "outputs": [
@@ -105,7 +105,7 @@
          "type": "float"
         }
        ],
-       "ref": "71059493-a247-40bf-8e78-29215c5efb36",
+       "ref": "c662c4f5-fab5-45d1-a94e-6f5b670dd2da",
        "rows": [
         [
          "anora",
@@ -846,22 +846,22 @@
          "0.67"
         ],
         [
-         "the-favorite-2019",
-         "the-favorite-2019",
-         "12",
-         "10",
-         "3",
-         "11",
-         "9",
-         "23",
-         "18",
-         "44",
-         "3",
-         "19",
-         "152",
-         "481.5",
-         "3.17",
-         "1.31"
+         "the-favourite",
+         "the-favourite",
+         "1737",
+         "4667",
+         "3132",
+         "17291",
+         "19093",
+         "88379",
+         "124477",
+         "307013",
+         "140113",
+         "139575",
+         "845477",
+         "3349790.0",
+         "3.96",
+         "0.76"
         ],
         [
          "cold-war-2018",
@@ -1322,7 +1322,7 @@
        "[65 rows x 15 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1342,12 +1342,14 @@
     "row_all = [x for x in df_all['moviename']]\n",
     "\n",
     "df_1k.index = row_1k\n",
-    "df_all.index = row_all\n"
+    "df_all.index = row_all\n",
+    "\n",
+    "df_all"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "e2a81af9",
    "metadata": {},
    "outputs": [
@@ -1816,11 +1818,6 @@
     "df_data = pd.DataFrame(dict_data)\n",
     "df_data.index = row_labels                  #Fully labeled now\n",
     "\n",
-    "## One issue rn is the different datasets have differences in which \n",
-    "# movies are included. As such, just exclude these exceptions just\n",
-    "## to make life easier. For the  overarching goal of identifying the \n",
-    "## effects of award winnings on reviews a single data point shouldn't \n",
-    "## necessarily change much. Can also go back and handle it separately later\n",
     "\n",
     "df_all_stats = df_data.drop('the-trial-of-the-chicago-7', axis = 0)\n",
     "df_all_stats = df_data.drop('the-favourite', axis = 0)\n",
@@ -4877,162 +4874,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "53564895",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dict_changes = {}\n",
-    "\n",
-    "dict_changes['moviename'] = df_all_stats['moviename']\n",
-    "change_labels = [x for x in df_all_stats['moviename']]\n",
-    "\n",
-    "\n",
-    "\n",
-    "df_changes = pd.DataFrame(dict_changes, index=change_labels)\n",
-    "\n",
-    "# print(change_labels)\n",
-    "# df_changes\n",
-    "\n",
-    "mean_changes = [df_all_stats.loc[x, 'one_k_mean'] - df_all_stats.loc[x,'all_mean'] for x in change_labels]\n",
-    "df_changes['mean_change'] = mean_changes"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "cd3b4995",
+   "execution_count": 13,
+   "id": "fbef3f7f",
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>moviename</th>\n",
-       "      <th>mean_change</th>\n",
-       "      <th>one_k_std_dev</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>boyhood</th>\n",
-       "      <td>boyhood</td>\n",
-       "      <td>0.68</td>\n",
-       "      <td>0.61</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>black-panther</th>\n",
-       "      <td>black-panther</td>\n",
-       "      <td>0.13</td>\n",
-       "      <td>0.77</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>cold-war-2018</th>\n",
-       "      <td>cold-war-2018</td>\n",
-       "      <td>0.09</td>\n",
-       "      <td>0.74</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>women-talking</th>\n",
-       "      <td>women-talking</td>\n",
-       "      <td>0.21</td>\n",
-       "      <td>0.80</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>oppenheimer-2023</th>\n",
-       "      <td>oppenheimer-2023</td>\n",
-       "      <td>0.33</td>\n",
-       "      <td>0.83</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>nomadland</th>\n",
-       "      <td>nomadland</td>\n",
-       "      <td>0.39</td>\n",
-       "      <td>0.73</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>the-fabelmans</th>\n",
-       "      <td>the-fabelmans</td>\n",
-       "      <td>0.33</td>\n",
-       "      <td>0.70</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>promising-young-woman</th>\n",
-       "      <td>promising-young-woman</td>\n",
-       "      <td>0.14</td>\n",
-       "      <td>0.91</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>dont-look-up-2021</th>\n",
-       "      <td>dont-look-up-2021</td>\n",
-       "      <td>0.17</td>\n",
-       "      <td>1.07</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>anora</th>\n",
-       "      <td>anora</td>\n",
-       "      <td>0.38</td>\n",
-       "      <td>0.74</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>63 rows × 3 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "                                   moviename  mean_change  one_k_std_dev\n",
-       "boyhood                              boyhood         0.68           0.61\n",
-       "black-panther                  black-panther         0.13           0.77\n",
-       "cold-war-2018                  cold-war-2018         0.09           0.74\n",
-       "women-talking                  women-talking         0.21           0.80\n",
-       "oppenheimer-2023            oppenheimer-2023         0.33           0.83\n",
-       "...                                      ...          ...            ...\n",
-       "nomadland                          nomadland         0.39           0.73\n",
-       "the-fabelmans                  the-fabelmans         0.33           0.70\n",
-       "promising-young-woman  promising-young-woman         0.14           0.91\n",
-       "dont-look-up-2021          dont-look-up-2021         0.17           1.07\n",
-       "anora                                  anora         0.38           0.74\n",
-       "\n",
-       "[63 rows x 3 columns]"
+       "Index(['moviename', 'one_k_mean', 'all_mean', 'one_k_5', 'one_k_10',\n",
+       "       'one_k_15', 'one_k_20', 'one_k_25', 'one_k_30', 'one_k_35', 'one_k_40',\n",
+       "       'one_k_45', 'one_k_50', 'all_5', 'all_10', 'all_15', 'all_20', 'all_25',\n",
+       "       'all_30', 'all_35', 'all_40', 'all_45', 'all_50'],\n",
+       "      dtype='object')"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "one_k_std_dev2 = []\n",
-    "\n",
-    "for x in df_changes['moviename']:\n",
-    "    one_k_std_dev2.append(df_1k.loc[x,'std_dev'])\n",
-    "\n",
-    "df_changes['one_k_std_dev'] = one_k_std_dev2\n",
-    "df_changes"
+    "df_all_stats.columns"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "a92abf56",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Now we just want to calculate out the differences in the bell curves. \n",
+    "## The easiest way is to renormalize the data and then take an L2 norm\n",
+    "\n",
+    "\n",
+    "## For df_1k the totals are 1000 reviews by construction so we can renormalize directly\n",
+    "## For df_all on the other hand we already have the totals as a column so we'll use that.\n",
+    "\n",
+    "one_k_totals = []\n",
+    "all_totals = []\n",
+    "\n",
+    "for x in df_all_stats['moviename']:\n",
+    "    one_k_totals.append(1000)\n",
+    "    all_totals.append(df_all['total'].loc[x])\n",
+    "\n",
+    "df_all_stats['one_k_total'] = one_k_totals\n",
+    "df_all_stats['all_total'] = all_totals\n",
+    "\n",
+    "df_all_stats\n",
+    "\n",
+    "## Now we can just compute a difference between everything\n",
+    "\n",
+    "def dist_bell_curves(x):\n",
+    "    sum_sq = 0\n",
+    "    for j in range(10):\n",
+    "        one_k_renorm = df_all_stats['one_k_'+str(5*(j+1))].loc[x]/df_all_stats['one_k_total'].loc[x]\n",
+    "        all_renorm = df_all_stats['all_'+str(5*(j+1))].loc[x]/df_all_stats['all_total'].loc[x]\n",
+    "        sum_sq = sum_sq + (one_k_renorm - all_renorm)**2\n",
+    "    return math.sqrt(sum_sq)\n",
+    "\n",
+    "bell_dist_list = []\n",
+    "for x in df_all_stats['moviename']:\n",
+    "    bell_dist_list.append(dist_bell_curves(x))\n",
+    "\n",
+    "df_all_stats['change_dist'] = bell_dist_list\n",
+    "\n",
+    "sorted_dist = df_all_stats['change_dist'].sort_values()\n",
+    "\n",
+    "sorted_dist.to_csv('L2_Distances.csv')\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "44e2d17d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
