Implemented drop script into zscore_collection

--- a/modified_data/connor_modified_data/z_scores/zscore_analysis_script.ipynb
+++ b/modified_data/connor_modified_data/z_scores/zscore_analysis_script.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "015783a6",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "4567a121",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 20,
    "id": "4dd50df5",
    "metadata": {},
    "outputs": [
@@ -35,53 +35,40 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "     mean_nl_1k_rank  mean_nl_all_rank  mean_yl_1k_rank  mean_yl_all_rank\n",
-      "0              204.0             221.0            203.0             222.0\n",
-      "1              160.0             172.0            160.0             151.0\n",
-      "2              144.0             136.0            140.0             130.0\n",
-      "3               68.0              65.0             53.0              52.0\n",
-      "4               82.0              77.0             80.0              80.0\n",
-      "..               ...               ...              ...               ...\n",
-      "651            269.0             272.0            157.0             181.0\n",
-      "652             37.0              51.0             36.0              44.0\n",
-      "653            490.0             486.0            553.0             551.0\n",
-      "654             99.0             119.0            124.0             129.0\n",
-      "655            467.0             454.0            501.0             489.0\n",
-      "\n",
-      "[656 rows x 4 columns]\n",
-      "          username  mean_nl_1k  mean_nl_all  mean_yl_1k  mean_yl_all  \\\n",
-      "0              jay   -0.045000     0.217857   -0.008718     0.286923   \n",
-      "1       deathproof   -0.195833     0.065208   -0.234500    -0.039333   \n",
-      "2     davidehrlich   -0.330175    -0.150877   -0.366897    -0.195172   \n",
-      "3         thejoshl   -0.997059    -0.798039   -1.184262    -0.970000   \n",
-      "4  colonelmortimer   -0.865088    -0.656140   -0.865088    -0.656140   \n",
-      "\n",
-      "   mean_nl_1k_rank  mean_nl_all_rank  mean_yl_1k_rank  mean_yl_all_rank  \n",
-      "0            204.0             221.0            203.0             222.0  \n",
-      "1            160.0             172.0            160.0             151.0  \n",
-      "2            144.0             136.0            140.0             130.0  \n",
-      "3             68.0              65.0             53.0              52.0  \n",
-      "4             82.0              77.0             80.0              80.0  \n"
+      "Index([ 16,  23,  24,  26,  30,  31,  37,  42,  67,  83,\n",
+      "       ...\n",
+      "       632, 634, 636, 640, 643, 644, 647, 651, 652, 654],\n",
+      "      dtype='int64', length=197)\n"
      ]
     }
    ],
    "source": [
     "df = pd.DataFrame()\n",
     "df['username'] = nl_1k['username']\n",
+    "reviews = [nl_1k,nl_all,yl_1k,yl_all]\n",
+    "#Average the columns\n",
     "df['mean_nl_1k'] = nl_1k.iloc[:,1:].mean(axis=1)\n",
     "df['mean_nl_all'] = nl_all.iloc[:,1:].mean(axis=1)\n",
     "df['mean_yl_1k'] = yl_1k.iloc[:,1:].mean(axis=1)\n",
     "df['mean_yl_all'] = yl_all.iloc[:,1:].mean(axis=1)\n",
-    "\n",
+    "#get count for non zero rows \n",
+    "cols = nl_1k.iloc[:,1:].columns\n",
+    "df['review_count'] = nl_all[cols].gt(0.1).sum(axis=1)\n",
+    "df['late_review_count'] = yl_all[cols].gt(0.1).sum(axis=1)\n",
+    "#Drop Reviewers which have not reviewed enough movies, threshold is 10% \n",
+    "rows_to_drop = df[df['review_count']<(len(cols)/10)].index\n",
+    "print(rows_to_drop)\n",
+    "df.drop(index= rows_to_drop, axis=0, inplace= True)\n",
+    "#Rank the columns \n",
     "rank_df = pd.DataFrame()\n",
-    "for col in df.columns[1:]:\n",
-    "    rank_df[col] = df[col].rank()\n",
+    "for col in df.columns[1:5]:\n",
+    "    rank_df[col] = df[col].rank(ascending = False)\n",
     "rank_df = rank_df.add_suffix('_rank')\n",
-    "print(rank_df)\n",
+    "#print(rank_df)\n",
     "frames = [df, rank_df]\n",
     "merged_df = pd.concat(frames,axis=1)\n",
     "\n",
-    "print(merged_df.head(5))\n",
+    "#print(merged_df.head(5))\n",
     "\n",
     "merged_df.to_csv(\"/Users/connorlockhart/Documents/GitHub/fall-2025-predicting-movie-success/modified_data/connor_modified_data/z_scores/zscore_collection.csv\", index = False)\n",
     "\n",
@@ -99,7 +86,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "erdos",
    "language": "python",
    "name": "python3"
   },
@@ -113,7 +100,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
