--- a/modified_data/connor_modified_data/z_scores/zscore_analysis_script.ipynb
+++ b/modified_data/connor_modified_data/z_scores/zscore_analysis_script.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 29,
    "id": "4dd50df5",
    "metadata": {},
    "outputs": [
@@ -35,10 +35,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Index([ 16,  23,  24,  26,  30,  31,  37,  42,  67,  83,\n",
-      "       ...\n",
-      "       632, 634, 636, 640, 643, 644, 647, 651, 652, 654],\n",
-      "      dtype='int64', length=197)\n"
+      "65\n"
      ]
     }
    ],
@@ -46,29 +43,45 @@
     "df = pd.DataFrame()\n",
     "df['username'] = nl_1k['username']\n",
     "reviews = [nl_1k,nl_all,yl_1k,yl_all]\n",
-    "#Average the columns\n",
-    "df['mean_nl_1k'] = nl_1k.iloc[:,1:].mean(axis=1)\n",
-    "df['mean_nl_all'] = nl_all.iloc[:,1:].mean(axis=1)\n",
-    "df['mean_yl_1k'] = yl_1k.iloc[:,1:].mean(axis=1)\n",
-    "df['mean_yl_all'] = yl_all.iloc[:,1:].mean(axis=1)\n",
+    "\n",
     "#get count for non zero rows \n",
     "cols = nl_1k.iloc[:,1:].columns\n",
     "df['review_count'] = nl_all[cols].gt(0.1).sum(axis=1)\n",
     "df['late_review_count'] = yl_all[cols].gt(0.1).sum(axis=1)\n",
     "#Drop Reviewers which have not reviewed enough movies, threshold is 10% \n",
     "rows_to_drop = df[df['review_count']<(len(cols)/10)].index\n",
-    "print(rows_to_drop)\n",
     "df.drop(index= rows_to_drop, axis=0, inplace= True)\n",
+    "\n",
+    "#Average the columns\n",
+    "\n",
+    "#for x in reviews:\n",
+    "    #df[f\"mean_{x}\"] = x.iloc[:,1:].mean(axis)=1\n",
+    "\n",
+    "df['mean_nl_1k'] = nl_1k.iloc[:,1:].mean(axis=1)\n",
+    "df['mean_nl_all'] = nl_all.iloc[:,1:].mean(axis=1)\n",
+    "df['mean_yl_1k'] = yl_1k.iloc[:,1:].mean(axis=1)\n",
+    "df['mean_yl_all'] = yl_all.iloc[:,1:].mean(axis=1)\n",
+    "\n",
     "#Rank the columns \n",
     "rank_df = pd.DataFrame()\n",
-    "for col in df.columns[1:5]:\n",
+    "for col in df.columns[3:8]:\n",
     "    rank_df[col] = df[col].rank(ascending = False)\n",
     "rank_df = rank_df.add_suffix('_rank')\n",
-    "#print(rank_df)\n",
+    "#merge the ranks with the scores\n",
     "frames = [df, rank_df]\n",
     "merged_df = pd.concat(frames,axis=1)\n",
     "\n",
-    "#print(merged_df.head(5))\n",
+    "#back testing algorithm\n",
+    "#Rerun the above for movies up to a certain amount\n",
+    "movies = ['anora', 'conclave', 'the-brutalist', 'emilia-perez', 'nickel-boys', 'wicked-2024', 'maria-2024', 'oppenheimer-2023', 'poor-things-2023', 'the-holdovers', 'american-fiction', 'everything-everywhere-all-at-once', 'all-quiet-on-the-western-front-2022', 'the-fabelmans', 'the-banshees-of-inisherin', 'women-talking', 'top-gun-maverick', 'elvis-2022', 'coda-2021', 'the-power-of-the-dog', 'west-side-story-2021', 'dont-look-up-2021', 'king-richard', 'tick-tick-boom-2021', 'dune-2021', 'mank', 'nomadland', 'the-trial-of-the-chicago-7', 'borat-subsequent-moviefilm', 'promising-young-woman', 'palm-springs-2020', 'parasite-2019', '1917', 'once-upon-a-time-in-hollywood', 'jojo-rabbit', 'green-book', 'roma-2018', 'black-panther', 'bohemian-rhapsody', 'eighth-grade', 'can-you-ever-forgive-me', 'the-favourite', 'cold-war-2018', 'the-shape-of-water', 'three-billboards-outside-ebbing-missouri', 'lady-bird', 'get-out-2017', 'call-me-by-your-name', 'dunkirk-2017', 'i-tonya', 'blade-runner-2049', 'moonlight-2016', 'la-la-land', 'hidden-figures', 'arrival-2016', 'lion', 'spotlight', 'the-big-short', 'the-revenant-2015', 'the-martian', 'mad-max-fury-road', 'birdman-or-the-unexpected-virtue-of-ignorance', 'boyhood', 'the-grand-budapest-hotel', 'the-imitation-game']\n",
+    "#reverse the list\n",
+    "movies = movies[::-1]\n",
+    "print(len(movies))\n",
+    "\n",
+    "#Start with the first 5 years and look up to the first 9 years\n",
+    "#for i in \n",
+    "\n",
+    "\n",
     "\n",
     "merged_df.to_csv(\"/Users/connorlockhart/Documents/GitHub/fall-2025-predicting-movie-success/modified_data/connor_modified_data/z_scores/zscore_collection.csv\", index = False)\n",
     "\n",
