--- a/modified_data/connor_modified_data/z_scores/zscore_analysis_script.ipynb
+++ b/modified_data/connor_modified_data/z_scores/zscore_analysis_script.ipynb
@@ -2,19 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 36,
    "id": "015783a6",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
+    "import math\n",
     "import os"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 31,
    "id": "4567a121",
    "metadata": {},
    "outputs": [],
@@ -27,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 45,
    "id": "4dd50df5",
    "metadata": {},
    "outputs": [
@@ -35,7 +36,130 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "65\n"
+      "65\n",
+      "first 5 years: ['the-imitation-game', 'the-grand-budapest-hotel', 'boyhood', 'birdman-or-the-unexpected-virtue-of-ignorance', 'mad-max-fury-road', 'the-martian', 'the-revenant-2015', 'the-big-short', 'spotlight', 'lion', 'arrival-2016', 'hidden-figures', 'la-la-land', 'moonlight-2016', 'blade-runner-2049', 'i-tonya', 'dunkirk-2017', 'call-me-by-your-name', 'get-out-2017', 'lady-bird', 'three-billboards-outside-ebbing-missouri', 'the-shape-of-water', 'cold-war-2018', 'the-favourite', 'can-you-ever-forgive-me', 'eighth-grade', 'bohemian-rhapsody', 'black-panther', 'roma-2018', 'green-book', 'jojo-rabbit', 'once-upon-a-time-in-hollywood']\n",
+      "first 6 years: ['the-imitation-game', 'the-grand-budapest-hotel', 'boyhood', 'birdman-or-the-unexpected-virtue-of-ignorance', 'mad-max-fury-road', 'the-martian', 'the-revenant-2015', 'the-big-short', 'spotlight', 'lion', 'arrival-2016', 'hidden-figures', 'la-la-land', 'moonlight-2016', 'blade-runner-2049', 'i-tonya', 'dunkirk-2017', 'call-me-by-your-name', 'get-out-2017', 'lady-bird', 'three-billboards-outside-ebbing-missouri', 'the-shape-of-water', 'cold-war-2018', 'the-favourite', 'can-you-ever-forgive-me', 'eighth-grade', 'bohemian-rhapsody', 'black-panther', 'roma-2018', 'green-book', 'jojo-rabbit', 'once-upon-a-time-in-hollywood', '1917', 'parasite-2019', 'palm-springs-2020', 'promising-young-woman', 'borat-subsequent-moviefilm', 'the-trial-of-the-chicago-7', 'nomadland']\n",
+      "first 7 years: ['the-imitation-game', 'the-grand-budapest-hotel', 'boyhood', 'birdman-or-the-unexpected-virtue-of-ignorance', 'mad-max-fury-road', 'the-martian', 'the-revenant-2015', 'the-big-short', 'spotlight', 'lion', 'arrival-2016', 'hidden-figures', 'la-la-land', 'moonlight-2016', 'blade-runner-2049', 'i-tonya', 'dunkirk-2017', 'call-me-by-your-name', 'get-out-2017', 'lady-bird', 'three-billboards-outside-ebbing-missouri', 'the-shape-of-water', 'cold-war-2018', 'the-favourite', 'can-you-ever-forgive-me', 'eighth-grade', 'bohemian-rhapsody', 'black-panther', 'roma-2018', 'green-book', 'jojo-rabbit', 'once-upon-a-time-in-hollywood', '1917', 'parasite-2019', 'palm-springs-2020', 'promising-young-woman', 'borat-subsequent-moviefilm', 'the-trial-of-the-chicago-7', 'nomadland', 'mank', 'dune-2021', 'tick-tick-boom-2021', 'king-richard', 'dont-look-up-2021', 'west-side-story-2021']\n",
+      "first 8 years: ['the-imitation-game', 'the-grand-budapest-hotel', 'boyhood', 'birdman-or-the-unexpected-virtue-of-ignorance', 'mad-max-fury-road', 'the-martian', 'the-revenant-2015', 'the-big-short', 'spotlight', 'lion', 'arrival-2016', 'hidden-figures', 'la-la-land', 'moonlight-2016', 'blade-runner-2049', 'i-tonya', 'dunkirk-2017', 'call-me-by-your-name', 'get-out-2017', 'lady-bird', 'three-billboards-outside-ebbing-missouri', 'the-shape-of-water', 'cold-war-2018', 'the-favourite', 'can-you-ever-forgive-me', 'eighth-grade', 'bohemian-rhapsody', 'black-panther', 'roma-2018', 'green-book', 'jojo-rabbit', 'once-upon-a-time-in-hollywood', '1917', 'parasite-2019', 'palm-springs-2020', 'promising-young-woman', 'borat-subsequent-moviefilm', 'the-trial-of-the-chicago-7', 'nomadland', 'mank', 'dune-2021', 'tick-tick-boom-2021', 'king-richard', 'dont-look-up-2021', 'west-side-story-2021', 'the-power-of-the-dog', 'coda-2021', 'elvis-2022', 'top-gun-maverick', 'women-talking', 'the-banshees-of-inisherin', 'the-fabelmans']\n",
+      "first 9 years: ['the-imitation-game', 'the-grand-budapest-hotel', 'boyhood', 'birdman-or-the-unexpected-virtue-of-ignorance', 'mad-max-fury-road', 'the-martian', 'the-revenant-2015', 'the-big-short', 'spotlight', 'lion', 'arrival-2016', 'hidden-figures', 'la-la-land', 'moonlight-2016', 'blade-runner-2049', 'i-tonya', 'dunkirk-2017', 'call-me-by-your-name', 'get-out-2017', 'lady-bird', 'three-billboards-outside-ebbing-missouri', 'the-shape-of-water', 'cold-war-2018', 'the-favourite', 'can-you-ever-forgive-me', 'eighth-grade', 'bohemian-rhapsody', 'black-panther', 'roma-2018', 'green-book', 'jojo-rabbit', 'once-upon-a-time-in-hollywood', '1917', 'parasite-2019', 'palm-springs-2020', 'promising-young-woman', 'borat-subsequent-moviefilm', 'the-trial-of-the-chicago-7', 'nomadland', 'mank', 'dune-2021', 'tick-tick-boom-2021', 'king-richard', 'dont-look-up-2021', 'west-side-story-2021', 'the-power-of-the-dog', 'coda-2021', 'elvis-2022', 'top-gun-maverick', 'women-talking', 'the-banshees-of-inisherin', 'the-fabelmans', 'all-quiet-on-the-western-front-2022', 'everything-everywhere-all-at-once', 'american-fiction', 'the-holdovers', 'poor-things-2023', 'oppenheimer-2023']\n",
+      "     mean_nl_1k_rank  mean_nl_all_rank  mean_yl_1k_rank  mean_yl_all_rank  \\\n",
+      "0              350.0             339.0            352.0             336.0   \n",
+      "1              384.0             372.0            387.0             389.0   \n",
+      "2              395.0             398.0            399.0             404.0   \n",
+      "3              441.0             440.0            447.0             446.0   \n",
+      "4              432.0             434.0            435.0             436.0   \n",
+      "..               ...               ...              ...               ...   \n",
+      "648             73.0              68.0             26.0              29.0   \n",
+      "649            454.0             454.0            455.0             453.0   \n",
+      "650            127.0             120.0            111.0             114.0   \n",
+      "653            114.0             119.0             68.0              68.0   \n",
+      "655            134.0             144.0            110.0             119.0   \n",
+      "\n",
+      "     mean_nl_1k_uptoyear5_rank  mean_nl_all_uptoyear5_rank  \\\n",
+      "0                        143.0                       136.0   \n",
+      "1                        307.0                       297.0   \n",
+      "2                        318.0                       329.0   \n",
+      "3                        358.0                       358.0   \n",
+      "4                        335.0                       339.0   \n",
+      "..                         ...                         ...   \n",
+      "648                       63.0                        64.0   \n",
+      "649                      364.0                       360.0   \n",
+      "650                        NaN                         NaN   \n",
+      "653                      230.0                       211.0   \n",
+      "655                       64.0                        69.0   \n",
+      "\n",
+      "     mean_yl_1k_uptoyear5_rank  mean_yl_all_uptoyear5_rank  \\\n",
+      "0                        274.0                       230.0   \n",
+      "1                        391.0                       389.0   \n",
+      "2                        412.0                       415.0   \n",
+      "3                        444.0                       446.0   \n",
+      "4                        424.0                       427.0   \n",
+      "..                         ...                         ...   \n",
+      "648                       24.0                        24.0   \n",
+      "649                      449.0                       444.0   \n",
+      "650                       79.0                        87.0   \n",
+      "653                      107.0                       102.0   \n",
+      "655                       49.0                        50.0   \n",
+      "\n",
+      "     mean_nl_1k_uptoyear6_rank  mean_nl_all_uptoyear6_rank  ...  \\\n",
+      "0                        261.0                       255.0  ...   \n",
+      "1                        361.0                       352.0  ...   \n",
+      "2                        368.0                       374.0  ...   \n",
+      "3                        408.0                       410.0  ...   \n",
+      "4                        395.0                       396.0  ...   \n",
+      "..                         ...                         ...  ...   \n",
+      "648                       53.0                        53.0  ...   \n",
+      "649                      418.0                       416.0  ...   \n",
+      "650                        NaN                         NaN  ...   \n",
+      "653                      217.0                       220.0  ...   \n",
+      "655                       61.0                        64.0  ...   \n",
+      "\n",
+      "     mean_yl_1k_uptoyear7_rank  mean_yl_all_uptoyear7_rank  \\\n",
+      "0                        334.0                       303.0   \n",
+      "1                        407.0                       407.0   \n",
+      "2                        409.0                       412.0   \n",
+      "3                        445.0                       445.0   \n",
+      "4                        427.0                       427.0   \n",
+      "..                         ...                         ...   \n",
+      "648                       18.0                        17.0   \n",
+      "649                      452.0                       449.0   \n",
+      "650                      350.0                       345.0   \n",
+      "653                      181.0                       176.0   \n",
+      "655                       39.0                        42.0   \n",
+      "\n",
+      "     mean_nl_1k_uptoyear8_rank  mean_nl_all_uptoyear8_rank  \\\n",
+      "0                        331.0                       327.0   \n",
+      "1                        394.0                       385.0   \n",
+      "2                        387.0                       393.0   \n",
+      "3                        435.0                       437.0   \n",
+      "4                        425.0                       425.0   \n",
+      "..                         ...                         ...   \n",
+      "648                       73.0                        74.0   \n",
+      "649                      450.0                       449.0   \n",
+      "650                      280.0                       277.0   \n",
+      "653                      170.0                       172.0   \n",
+      "655                       99.0                       106.0   \n",
+      "\n",
+      "     mean_yl_1k_uptoyear8_rank  mean_yl_all_uptoyear8_rank  \\\n",
+      "0                        347.0                       328.0   \n",
+      "1                        405.0                       408.0   \n",
+      "2                        401.0                       403.0   \n",
+      "3                        447.0                       447.0   \n",
+      "4                        430.0                       430.0   \n",
+      "..                         ...                         ...   \n",
+      "648                       26.0                        27.0   \n",
+      "649                      454.0                       451.0   \n",
+      "650                      215.0                       220.0   \n",
+      "653                      102.0                       105.0   \n",
+      "655                       85.0                        89.0   \n",
+      "\n",
+      "     mean_nl_1k_uptoyear9_rank  mean_nl_all_uptoyear9_rank  \\\n",
+      "0                        355.0                       342.0   \n",
+      "1                        393.0                       386.0   \n",
+      "2                        399.0                       399.0   \n",
+      "3                        436.0                       437.0   \n",
+      "4                        432.0                       433.0   \n",
+      "..                         ...                         ...   \n",
+      "648                      107.0                       106.0   \n",
+      "649                      456.0                       456.0   \n",
+      "650                      163.0                       159.0   \n",
+      "653                      132.0                       127.0   \n",
+      "655                      140.0                       148.0   \n",
+      "\n",
+      "     mean_yl_1k_uptoyear9_rank  mean_yl_all_uptoyear9_rank  \n",
+      "0                        357.0                       337.0  \n",
+      "1                        399.0                       399.0  \n",
+      "2                        403.0                       404.0  \n",
+      "3                        445.0                       445.0  \n",
+      "4                        434.0                       432.0  \n",
+      "..                         ...                         ...  \n",
+      "648                       35.0                        38.0  \n",
+      "649                      457.0                       452.0  \n",
+      "650                      133.0                       134.0  \n",
+      "653                       77.0                        75.0  \n",
+      "655                      112.0                       117.0  \n",
+      "\n",
+      "[459 rows x 24 columns]\n"
      ]
     }
    ],
@@ -53,9 +177,11 @@
     "df.drop(index= rows_to_drop, axis=0, inplace= True)\n",
     "\n",
     "#Average the columns\n",
-    "\n",
-    "#for x in reviews:\n",
-    "    #df[f\"mean_{x}\"] = x.iloc[:,1:].mean(axis)=1\n",
+    "#This didn't work\n",
+    "#testdf = pd.DataFrame()\n",
+    "#for item in reviews:\n",
+    "#    testdf = item\n",
+    "#    df[\"mean\"+str(item)] = testdf.iloc[:,1:].mean(axis)=1\n",
     "\n",
     "df['mean_nl_1k'] = nl_1k.iloc[:,1:].mean(axis=1)\n",
     "df['mean_nl_all'] = nl_all.iloc[:,1:].mean(axis=1)\n",
@@ -79,7 +205,29 @@
     "print(len(movies))\n",
     "\n",
     "#Start with the first 5 years and look up to the first 9 years\n",
-    "#for i in \n",
+    "numbers = list(range(5,10))\n",
+    "\n",
+    "#Truncate the list of movies and perform computations\n",
+    "for i in numbers: \n",
+    "    truncated_movies = movies[:math.floor(len(movies)*(i/10))]\n",
+    "    print(f\"first {i} years: {truncated_movies}\")\n",
+    "\n",
+    "    df[f\"mean_nl_1k_uptoyear{i}\"] = nl_1k[truncated_movies].mean(axis=1)\n",
+    "    df[f\"mean_nl_all_uptoyear{i}\"] = nl_all[truncated_movies].mean(axis=1)\n",
+    "    df[f\"mean_yl_1k_uptoyear{i}\"] = yl_1k[truncated_movies].mean(axis=1)\n",
+    "    df[f\"mean_yl_all_uptoyear{i}\"] = yl_all[truncated_movies].mean(axis=1)\n",
+    "    #print(df.head(5))\n",
+    "\n",
+    "#Rank the columns \n",
+    "rank_df = pd.DataFrame()\n",
+    "for col in df.columns[3:]:\n",
+    "    rank_df[col] = df[col].rank(ascending = False)\n",
+    "rank_df = rank_df.add_suffix('_rank')\n",
+    "print(rank_df)\n",
+    "#Merge the ranks with the scores\n",
+    "frames = [df, rank_df]\n",
+    "merged_df = pd.concat(frames,axis=1)\n",
+    "\n",
     "\n",
     "\n",
     "\n",
