--- a/Post_Award_Analysis/Review_Analysis_Simplified.ipynb
+++ b/Post_Award_Analysis/Review_Analysis_Simplified.ipynb
@@ -6999,7 +6999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "id": "e25fbf90",
    "metadata": {},
    "outputs": [],
@@ -7018,6 +7018,29 @@
     "mod_sorted_list = df_all_stats['mod_bell_dist'].sort_values()\n",
     "\n",
     "mod_sorted_list.to_csv('L2_Distances_Mod.csv')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "ade843e2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#diff_means = [df_all_stats['one_k_mean'].loc[x] - df_all_stats['all_mean'].loc[x] for x in df_all_stats['moviename']]\n",
+    "\n",
+    "# dict_mean_diff = {\n",
+    "#     x: df_all_stats['one_k_mean'].loc[x] - df_all_stats['all_mean'].loc[x] for x in df_all_stats['moviename']\n",
+    "# }\n",
+    "\n",
+    "dict_mean_diff = {}\n",
+    "dict_mean_diff['moviename'] = df_all_stats['moviename']\n",
+    "dict_mean_diff['mean_diff'] = [df_all_stats['one_k_mean'].loc[x] - df_all_stats['all_mean'].loc[x] for x in df_all_stats['moviename']]\n",
+    "df_mean_diff = pd.DataFrame(dict_mean_diff, index = df_all_stats['moviename'])\n",
+    "\n",
+    "sorted_mean_diff = df_mean_diff['mean_diff'].sort_values()\n",
+    "\n",
+    "sorted_mean_diff.to_csv('Sorted_Mean_Differences.csv')"
    ]
   }
  ],
