flipped the mean diff

--- a/Post_Award_Analysis/Review_Analysis_Simplified.ipynb
+++ b/Post_Award_Analysis/Review_Analysis_Simplified.ipynb
@@ -7022,7 +7022,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "id": "ade843e2",
    "metadata": {},
    "outputs": [],
@@ -7041,6 +7041,25 @@
     "sorted_mean_diff = df_mean_diff['mean_diff'].sort_values()\n",
     "\n",
     "sorted_mean_diff.to_csv('Sorted_Mean_Differences.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "15ca9287",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dict_mean_diff_flip = {}\n",
+    "dict_mean_diff_flip['moviename'] = df_all_stats['moviename']\n",
+    "dict_mean_diff_flip['mean_diff'] = [-df_all_stats['one_k_mean'].loc[x] + df_all_stats['all_mean'].loc[x] for x in df_all_stats['moviename']]\n",
+    "df_mean_diff_flip = pd.DataFrame(dict_mean_diff_flip, index = df_all_stats['moviename'])\n",
+    "\n",
+    "sorted_mean_diff_flip = df_mean_diff_flip['mean_diff'].sort_values()\n",
+    "\n",
+    "sorted_mean_diff_flip\n",
+    "\n",
+    "sorted_mean_diff_flip.to_csv('Sorted_Mean_Diff_Flip.csv')"
    ]
   }
  ],
